footer spacing fixed

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -50,8 +50,8 @@
   justify-content: space-between;
 }
 .columnFooterColumnLink {
-  display: grid;
-  grid-template-columns: auto auto auto;
+  display: flex;
+  justify-content: space-between;
 }
 .columnFooterColumnLink > div {
   display: flex;
@@ -74,7 +74,7 @@
     gap: 10px;
   }
   .columnFooterColumnLink {
-    grid-template-columns: auto;
+    flex-direction: column;
     row-gap: 15px;
   }
   .columnFooterColumnLink > div {
